tests/ui/parallel-rustc/recursive-trait-fn-sig-issue-142064.stderr
warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/recursive-trait-fn-sig-issue-142064.rs:7:23
   |
LL | trait A { fn foo() -> A; }
   |                       ^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/warnings-promoted-to-error.html>
   = note: `#[warn(bare_trait_objects)]` (part of `#[warn(rust_2021_compatibility)]`) on by default
help: if this is a dyn-compatible trait, use `dyn`
   |
LL | trait A { fn foo() -> dyn A; }
   |                       +++

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/recursive-trait-fn-sig-issue-142064.rs:13:23
   |
LL | trait B { fn foo() -> A; }
   |                       ^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/warnings-promoted-to-error.html>
help: if this is a dyn-compatible trait, use `dyn`
   |
LL | trait B { fn foo() -> dyn A; }
   |                       +++

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/recursive-trait-fn-sig-issue-142064.rs:7:23
   |
LL | trait A { fn foo() -> A; }
   |                       ^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/warnings-promoted-to-error.html>
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: if this is a dyn-compatible trait, use `dyn`
   |
LL | trait A { fn foo() -> dyn A; }
   |                       +++

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/recursive-trait-fn-sig-issue-142064.rs:13:23
   |
LL | trait B { fn foo() -> A; }
   |                       ^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/warnings-promoted-to-error.html>
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: if this is a dyn-compatible trait, use `dyn`
   |
LL | trait B { fn foo() -> dyn A; }
   |                       +++

error[E0038]: the trait `A` is not dyn compatible
  --> $DIR/recursive-trait-fn-sig-issue-142064.rs:7:23
   |
LL | trait A { fn foo() -> A; }
   |                       ^ `A` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/recursive-trait-fn-sig-issue-142064.rs:7:14
   |
LL | trait A { fn foo() -> A; }
   |       -      ^^^ ...because associated function `foo` has no `self` parameter
   |       |
   |       this trait is not dyn compatible...
help: consider turning `foo` into a method by giving it a `&self` argument
   |
LL | trait A { fn foo(&self) -> A; }
   |                  +++++
help: alternatively, consider constraining `foo` so it does not apply to trait objects
   |
LL | trait A { fn foo() -> A where Self: Sized; }
   |                         +++++++++++++++++
help: you might have meant to use `Self` to refer to the implementing type
   |
LL - trait A { fn foo() -> A; }
LL + trait A { fn foo() -> Self; }
   |

error[E0038]: the trait `A` is not dyn compatible
  --> $DIR/recursive-trait-fn-sig-issue-142064.rs:13:23
   |
LL | trait B { fn foo() -> A; }
   |                       ^ `A` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/recursive-trait-fn-sig-issue-142064.rs:7:14
   |
LL | trait A { fn foo() -> A; }
   |       -      ^^^ ...because associated function `foo` has no `self` parameter
   |       |
   |       this trait is not dyn compatible...
help: consider turning `foo` into a method by giving it a `&self` argument
   |
LL | trait A { fn foo(&self) -> A; }
   |                  +++++
help: alternatively, consider constraining `foo` so it does not apply to trait objects
   |
LL | trait A { fn foo() -> A where Self: Sized; }
   |                         +++++++++++++++++
help: you might have meant to use `Self` to refer to the implementing type
   |
LL - trait B { fn foo() -> A; }
LL + trait B { fn foo() -> Self; }
   |

error: aborting due to 2 previous errors; 4 warnings emitted

For more information about this error, try `rustc --explain E0038`.
